--- a/rs-react-app/src/components/search-container/SearchContainer.module.scss
+++ b/rs-react-app/src/components/search-container/SearchContainer.module.scss
@@ -13,6 +13,8 @@
   gap: 20px;
   box-sizing: border-box;
   border-radius: 16px;
+  background-size: 200% 100%;
+  animation: gradient 5s ease infinite;
   form {
     display: flex;
     flex-direction: row;
@@ -27,7 +29,11 @@
       font-weight: 600;
       width: 40%;
       background: #313131;
-      border: 1px solid #414141;
+      // border: 1px solid #414141;
+      border-color: (-45deg, #ffae00, #7e03aa, #00fffb);
+      border-width: 0.125em;
+      --blur: 30px;
+      box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.6);
       padding: 12px 16px;
       font-size: inherit;
       gap: 8px;
@@ -58,5 +64,18 @@
         border-color: #e81cff;
       }
     }
+  }
+}
+@keyframes gradient {
+  0% {
+    background-position: 0% 50%;
+  }
+
+  50% {
+    background-position: 100% 50%;
+  }
+
+  100% {
+    background-position: 0% 50%;
   }
 }
