--- a/rs-react-app/src/components/search-container/SearchContainer.module.scss
+++ b/rs-react-app/src/components/search-container/SearchContainer.module.scss
@@ -1,7 +1,7 @@
 .container {
   width: 100wv;
   background:
-    linear-gradient(#212121, #212121) padding-box,
+    // linear-gradient(#212121, #212121) padding-box,
     linear-gradient(145deg, transparent 35%, #e81cff, #40c9ff) border-box;
   border: 2px solid transparent;
   padding: 32px 24px;
@@ -29,7 +29,6 @@
       font-weight: 600;
       width: 40%;
       background: #313131;
-      // border: 1px solid #414141;
       border-color: (-45deg, #ffae00, #7e03aa, #00fffb);
       border-width: 0.125em;
       --blur: 30px;
